--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flvm
 description: "flvm mvvm package extension"
 version: 0.0.1
-homepage:
+repository: https://github.com/fedorenkoalex/flvm
 
 environment:
   sdk: ^3.10.1
